--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "workspace",
   "version": "1.0.0",
   "main": "index.js",
@@ -13,6 +14,7 @@
   "dependencies": {
     "@whiskeysockets/baileys": "^7.0.0-rc.6",
     "axios": "^1.12.2",
+    "dotenv": "^17.2.3",
     "node-cron": "^4.2.1",
     "opencage-api-client": "^2.0.1",
     "openrouteservice-js": "^0.4.1",
