--- a/package.json
+++ b/package.json
@@ -1,24 +1,31 @@
 {
   "type": "module",
   "name": "workspace",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "main": "index.js",
   "scripts": {
     "start": "node src/bot.js",
+    "server": "node src/server.js",
+    "dev": "concurrently \"npm run server\" \"npm run start\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "description": "Bot de WhatsApp para corridas com localização GPS em tempo real",
   "dependencies": {
     "@whiskeysockets/baileys": "^7.0.0-rc.6",
     "axios": "^1.12.2",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
+    "express": "^4.18.2",
     "node-cron": "^4.2.1",
     "opencage-api-client": "^2.0.1",
     "openrouteservice-js": "^0.4.1",
     "pino": "^10.1.0",
     "qrcode-terminal": "^0.12.0"
+  },
+  "devDependencies": {
+    "concurrently": "^8.2.2"
   }
 }
